--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "version": "1.0",
     "browser_action": {
         "default_icon": "src/img/icon.png",
-        "default_popup": "src/html/test.html"
+        "default_popup": "src/html/select.html"
     },
     "content_scripts": [
         {
