--- a/manifest.stg.json
+++ b/manifest.stg.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
 
-    "name": "艦これウィジェット",
+    "name": "stg.艦これウィジェット",
     "version": "0.2.0",
 
     "description": "提督さん、仕事するです？艦これするです？",
