--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,8 @@
 
     "description": "提督さん、仕事するです？艦これするです？",
     "icons" : {
-        "48"  : "src/img/icon.48.png",
-        "128" : "src/img/icon.128.png"
+        "48"  : "icon.48.png",
+        "128" : "icon.128.png"
     },
     "permissions" : [
         "tabs",
@@ -24,7 +24,7 @@
         ]
     },
     "browser_action": {
-        "default_icon": "src/img/icon.png",
+        "default_icon": "icon.png",
         "default_popup": "src/html/select.html"
     },
     "content_scripts": [
