--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,7 @@
         "scripts" : [
             "src/js/definitions/ConstantMapping.js",
             "src/js/definitions/Util.js",
+            "src/js/definitions/Now.js",
             "src/js/definitions/MyStorage.js",
             "src/js/definitions/Missions.js",
             "src/js/definitions/Action.js",
