Interface to set Nyukyo reminder

--- a/manifest.json
+++ b/manifest.json
@@ -26,11 +26,14 @@
             "src/js/definitions/models/events/EventsBase.js",
             "src/js/definitions/models/events/missions/Mission.js",
             "src/js/definitions/models/events/missions/Missions.js",
+            "src/js/definitions/models/events/nyukyos/Nyukyo.js",
+            "src/js/definitions/models/events/nyukyos/Nyukyos.js",
             "src/js/definitions/models/events/createships/Createship.js",
             "src/js/definitions/models/events/createships/Createships.js",
             "src/js/definitions/Dispatcher.js",
             "src/js/definitions/Observer.js",
             "src/js/definitions/actions/Map.js",
+            "src/js/definitions/actions/Nyukyo.js",
             "src/js/definitions/actions/Kousyou.js",
             "src/js/definitions/actions/Kaisou.js",
             "src/js/definitions/actions/Hokyu.js",
