--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,7 @@
             "src/js/definitions/Util.js",
             "src/js/definitions/Now.js",
             "src/js/definitions/models/MyStorage.js",
+            "src/js/definitions/models/FileSystem.js",
             "src/js/definitions/models/achievements/Achievements.js",
             "src/js/definitions/models/events/EventsBase.js",
             "src/js/definitions/models/events/missions/Mission.js",
@@ -49,7 +50,6 @@
         "default_icon": "icon.png",
         "default_popup": "src/html/select.html"
     },
-    "options_page": "src/html/config.html",
     "content_scripts": [
         {
             "matches" : [
