--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,7 @@
         "persistent" : true,
         "scripts" : [
             "src/js/Constants.js",
+            "src/js/pages/util.js",
             "src/js/definitions/Util.js",
             "src/js/definitions/Now.js",
             "src/js/definitions/models/MyStorage.js",
