--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,7 @@
         "tabs",
         "notifications",
         "webRequest",
+        "unlimitedStorage",
         "*://*/*"
     ],
     "background" : {
