--- a/manifest.json
+++ b/manifest.json
@@ -19,9 +19,8 @@
     "background" : {
         "persistent" : true,
         "scripts" : [
+            "src/js/Util.js",
             "src/js/Constants.js",
-            "src/js/pages/util.js",
-            "src/js/definitions/Util.js",
             "src/js/definitions/Now.js",
             "src/js/definitions/models/MyStorage.js",
             "src/js/definitions/models/achievements/Achievements.js",
@@ -56,8 +55,8 @@
                 "http://www.dmm.com/netgame/social/-/gadgets/=/app_id=854854/?mode=*"
             ],
             "js" : [
+                "src/js/Util.js",
                 "src/js/Constants.js",
-                "src/js/pages/util.js",
                 "src/js/pages/proxy.js"
             ]
         },
@@ -66,8 +65,8 @@
                 "http://osapi.dmm.com/gadgets/ifr?*"
             ],
             "js" : [
+                "src/js/Util.js",
                 "src/js/Constants.js",
-                "src/js/pages/util.js",
                 "src/js/pages/proxy2.js"
             ],
             "css" : [
