refactor notification flow

--- a/cli/build
+++ b/cli/build
@@ -24,7 +24,9 @@ build_stg(){
   mkdir release/stg.kanColleWidget
   cp -r src release/stg.kanColleWidget/
   mv release/stg.kanColleWidget/src/img/icon* release/stg.kanColleWidget/
-  cp manifest.stg.json release/stg.kanColleWidget/manifest.json
+  cp manifest.json release/stg.kanColleWidget/manifest.json
+  sed -e 's/艦これウィジェット/stg.艦これウィジェット/' -i.bak release/stg.kanColleWidget/manifest.json
+  rm release/stg.kanColleWidget/manifest.json.bak
   zip -r release/stg.kanColleWidget.zip release/stg.kanColleWidget/*
 }
 
