--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,8 @@
     "background" : {
         "persistent" : true,
         "scripts" : [
+            "src/js/AssetManager.js",
+            "src/js/Notifier.js",
             "src/js/Util.js",
             "src/js/Constants.js",
             "src/js/definitions/models/MyStorage.js",
@@ -66,6 +68,8 @@
                 "http://osapi.dmm.com/gadgets/ifr?*"
             ],
             "js" : [
+                "src/js/AssetManager.js",
+                "src/js/Notifier.js",
                 "src/js/jquery.min.js",
                 "src/js/Util.js",
                 "src/js/Constants.js",
