--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,8 @@
             "src/js/Notifier.js",
             "src/js/Util.js",
             "src/js/Constants.js",
+            "src/js/definitions/models/server/ServerBase.js",
+            "src/js/definitions/models/server/LogServer.js",
             "src/js/definitions/models/MyStorage.js",
             "src/js/definitions/models/achievements/Achievements.js",
             "src/js/definitions/models/events/SoloEventBase.js",
