--- a/manifest.json
+++ b/manifest.json
@@ -29,6 +29,7 @@
             "src/js/definitions/models/server/OcrServer.js",
             "src/js/definitions/models/MyStorage.js",
             "src/js/definitions/models/achievements/Achievements.js",
+            "src/js/definitions/models/quests/Quests.js",
             "src/js/definitions/models/events/SoloEventBase.js",
             "src/js/definitions/models/events/EventsBase.js",
             "src/js/definitions/models/events/missions/Mission.js",
@@ -47,6 +48,7 @@
             "src/js/definitions/actions/Practice.js",
             "src/js/definitions/actions/Mission.js",
             "src/js/definitions/actions/Payment.js",
+            "src/js/definitions/actions/Quest.js",
             "src/js/definitions/actions/Action.js",
             "src/js/background.js",
             "src/js/pngencoder.min.js"
