Add interface to change filename on Capture Page

--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,9 @@
     "background" : {
         "persistent" : true,
         "scripts" : [
+            "src/js/jquery.min.js",
+            "src/js/pages/view/View.js",
+            "src/js/pages/view/CaptureView.js",
             "src/js/AssetManager.js",
             "src/js/Notifier.js",
             "src/js/Util.js",
