Create watching mode by using grunt

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "author": "otiai10",
   "license": "BSD",
   "dependencies": {
-    "testem": "*"
+    "grunt": "*",
+    "grunt-exec": "*",
+    "grunt-regarde": "*"
   }
 }
