--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "grunt": "*",
     "grunt-exec": "*",
-    "grunt-regarde": "*"
+    "grunt-regarde": "*",
+    "grunt-contrib-jshint": "*"
   }
 }
