--- a/cli/build
+++ b/cli/build
@@ -30,6 +30,16 @@ build_stg(){
   zip -r build/stg.kanColleWidget.zip build/stg.kanColleWidget/*
 }
 
+build_beta(){
+  rm -rf build/beta.kanColleWidget
+  mkdir -p build/beta.kanColleWidget
+  cp -r src build/beta.kanColleWidget/
+  mv build/beta.kanColleWidget/src/img/icon* build/beta.kanColleWidget/
+  cp manifest/prod.json build/beta.kanColleWidget/manifest.json
+  sed -e 's/艦これウィジェット/beta.艦これウィジェット/' -i.bak build/beta.kanColleWidget/manifest.json
+  zip -r build/beta.kanColleWidget.zip build/beta.kanColleWidget/*
+}
+
 build_test(){
   cp -rf src test/
 }
@@ -37,6 +47,7 @@ build_test(){
 build_all(){
   build_prod
   build_stg
+  build_beta
   build_test
 }
 
@@ -87,6 +98,7 @@ case $1 in
   "all" )
     build_prod
     build_stg
+    build_beta
     build_test
     show_manifest_diff
     version_check
