Starting over `API` with TypeScript

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "grunt": "*",
     "grunt-exec": "*",
     "grunt-regarde": "*",
-    "grunt-contrib-jshint": "*"
+    "grunt-contrib-jshint": "*",
+    "grunt-typescript": "*",
+    "grunt-contrib-concat": "*"
   }
 }
