--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-exec": "*",
     "grunt-regarde": "*",
     "grunt-contrib-concat": "*",
+    "grunt-contrib-uglify": "*",
     "grunt-typescript": "0.2.0"
   }
 }
