--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   "author": "otiai10",
   "license": "BSD",
   "dependencies": {
-    "grunt": "*",
-    "grunt-exec": "*",
-    "grunt-regarde": "*",
-    "grunt-contrib-concat": "*",
-    "grunt-contrib-uglify": "*",
-    "grunt-contrib-handlebars": "*",
+    "grunt": "0.4.5",
+    "grunt-exec": "0.4.6",
+    "grunt-regarde": "0.1.1",
+    "grunt-contrib-concat": "0.5.0",
+    "grunt-contrib-uglify": "0.6.0",
+    "grunt-contrib-handlebars": "0.9.1",
     "grunt-typescript": "0.2.0"
   }
 }
