--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "testem"
+    "test": "testem",
+    "start": "./node_modules/grunt-cli/bin/grunt watch",
+    "build": "./node_modules/grunt-cli/bin/grunt build",
+    "release": "./node_modules/grunt-cli/bin/grunt release"
   },
   "repository": {
     "type": "git",
@@ -30,5 +33,8 @@
     "grunt-contrib-uglify": "0.6.0",
     "grunt-contrib-handlebars": "0.9.1",
     "grunt-typescript": "0.2.0"
+  },
+  "devDependencies": {
+    "grunt-cli": "^1.2.0"
   }
 }
