--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
 node_js:
-  - 6.2
+  - "6.2"
+addons:
+  firefox: latest
 install:
   - npm install
 before_script:
   - npm run build
 script:
-  - npm run launchers
-  - npm test
+  - npm run ci
