--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: node_js
 node_js:
   - "6.2"
-addons:
-  firefox: latest
 install:
   - npm install
 before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 5 # give xvfb some time to start
   - npm run build
 script:
+  - npm run launchers
   - npm run ci
