--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "node": "6.2.0"
   },
   "scripts": {
-    "test": "testem",
-    "ci": "testem ci",
-    "launchers": "testem launchers",
+    "test": "mocha --recursive spec --compilers js:babel-register",
     "build": "webpack",
     "start": "webpack --watch"
   },
@@ -31,6 +29,8 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5",
     "testem": "^1.7.1",
     "webpack": "^1.13.0"
   }
