--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
     "mocha": "^2.4.5",
+    "react-dom": "^15.1.0",
     "testem": "^1.7.1",
     "webpack": "^1.13.0"
   }
