--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "chai": "^3.5.0",
+    "chomex": "*",
     "material-ui": "^0.15.0",
     "mocha": "^2.4.5",
     "react-dom": "^15.1.0",
