--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,10 @@
       "matches": [
         "http://www.dmm.com/netgame/social/-/gadgets/=/app_id=854854/"
       ],
-      "js": ["dest/js/dmm.js"]
+      "js": [
+        "dest/js/zepto.min.js",
+        "dest/js/dmm.js"
+      ]
     }
   ]
 }
